# hech-interp

./: .envrc  .gitignore  README.md  cabal.project  flake.nix  hasktorch-skeleton.cabal  hech-interp.cabal  hie.yaml  stack.yaml
exe/: Main.hs
src/: GPT2.hs  infer.hs
src/GPT2/: AList.hs  CachedModel.hs  HListExtensions.hs  Loader.hs  Model.hs
