cabal-version:       2.2
name:                hech-interp
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              The Hasktorch Team
maintainer:          hasktorch@gmail.com
copyright:           2020 The Hasktorch Team
category:            Tensors, Machine Learning, AI
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.3

common base
  ghc-options: -Wall -Wextra -Wno-unrecognised-pragmas -Wno-orphans
  default-language: Haskell2010
  build-depends:
      base >= 4.12 && < 5
    , hasktorch >= 0.2 && < 0.3
    , libtorch-ffi >= 2.0
    , safe-exceptions >= 0.1.7
    , aeson >= 2.2
    , binary >= 0.8.9
    , bytestring >= 0.12
    , containers >= 0.6.8
    , ghc-typelits-natnormalise >= 0.7.10
    , ghc-typelits-knownnat == 0.7.12
    , ghc-typelits-extra == 0.4.7
    , binary
    , ghc
    , ghc-typelits-extra
    , ghc-typelits-knownnat
    , ghc-typelits-natnormalise
    , hashmap
    , libtorch-ffi
    , libtorch-ffi-helper
    , safe-exceptions
    , transformers
    , constraints
    , tiktoken
    , megaparsec < 9.7

common binary-base
  import: base
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: 
    hech-interp

library
  import: base
  exposed-modules:
    GPT2
    GPT2.Loader
    GPT2.Model
    SafeTensors
  hs-source-dirs: src
  ghc-options:
    -fplugin GHC.TypeLits.Normalise -fplugin
    GHC.TypeLits.KnownNat.Solver -fplugin GHC.TypeLits.Extra.Solver
    -fconstraint-solver-iterations=0 -fplugin GHC.NotExport.Plugin

executable example
  import: binary-base
  main-is: Main.hs
  hs-source-dirs: exe
